# homeinventory

./: LICENSE  README.md  pyproject.toml
src/homeinventory/: __init__.py  __main__.py  common.py  database.py  itembox.py  stringbox.py  stringboxutil.py  widgets.py
tests/: box_test.py  database_test.py  stringbox_test.py
