[tool.poetry]
name = "homeinventory"
version = "0.1.0"
description = "A simple home inventory system."
authors = ["Gabe Arenas <garenas@unomaha.edu>"]
readme = "README.md"
license = "GPL-3.0-or-later"
packages = [{include = "homeinventory", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
flake8 = "^7.1.1"
mypy = "^1.12.0"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
    "--strict-markers",
    "--doctest-modules",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
